--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rd3t-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://leventebajczi.com/theta-debugger/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
